--- a/Unit1.fmx
+++ b/Unit1.fmx
@@ -161,7 +161,8 @@ object Form1: TForm1
     Items.Strings = (
       'execute'
       'head'
-      'data')
+      'data'
+      'make')
     ItemIndex = 0
     Position.X = 88.000000000000000000
     Position.Y = 168.000000000000000000
