--- a/Unit1.fmx
+++ b/Unit1.fmx
@@ -154,6 +154,7 @@ object Form1: TForm1
     DefaultItemStyles.GroupFooterStyle = ''
   end
   object SaveDialog1: TSaveDialog
+    DefaultExt = 'wav'
     Left = 336
     Top = 296
   end
